--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "foodocean",
     "version": "0.1.0",
-    "homepage": "https://johnwick3690.github.io/foodocean.in",
+    "homepage": "https://johnwick3690.github.io/foodocean",
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.2",
