--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "foodocean",
     "version": "0.1.0",
-    "homepage": "https://johnwick3690.github.io/foodocean",
+    "homepage": "https://johnwick3690.github.io/recipeapp",
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.2",
@@ -14,17 +14,17 @@
         "react-dom": "^17.0.1",
         "react-google-login": "^5.1.25",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.1",
+        "react-scripts": "^2.1.8",
         "uuid": "^8.3.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -b master -d build"
     },
     "eslintConfig": {
         "extends": [
